# wsu_ros_docker

./: Dockerfile  LICENSE  README.md  docker-compose.yml
root/defaults/: startwm.sh
shared/: MatlabListener.m
shared/ME485/turtlebot3_fixups/: README.txt  model.sdf
shared/ME583/matlab/: CentroidTrackingDemo.m  FloatingCamera.m  ME583_Helpers_F25.py  ME583_MidtermF25_Template.m  floating_camera_py.py
shared/ME583/python/: ME583_MidtermF25_Template.py  camera_demo.py  image_capture.py
shared/MatlabRosClient/: FloatingCamera.m  FloatingCameraExample.m  README.md  floating_camera_py.py
shared/ROS2_fixups/: bringup_launch.py
shared/ros2_camera_ws/src/floating_camera/: examples_sphere_positions.sh  package.xml  set_gazebo_view.sh  setup.cfg  setup.py
shared/ros2_camera_ws/src/floating_camera/config/: camera_intrinsics.yaml  default_sphere_positions.yaml
shared/ros2_camera_ws/src/floating_camera/floating_camera/: __init__.py  camera_controller.py  camera_demo.py  gazebo_view_setter.py  set_gui_camera.py  spawn_camera.py  world_with_plugin.world
shared/ros2_camera_ws/src/floating_camera/launch/: camera_world.launch.py
