<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>floating_camera</name>
  <version>0.0.1</version>
  <description>Gazebo floating camera with spheres, intrinsics config, and motion controller.</description>
  <maintainer email="me485@todo.todo">me485</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
